# wazo_agentd/plugins/agent/api.yml
@@ -1,90 +1,4 @@
-swagger: '2.0'
-info:
-  title: wazo-agentd
-  description: Agent service
-  version: '1.0'
-  license:
-    name: GPL v3
-    url: http://www.gnu.org/licenses/gpl.txt
-  contact:
-    name: Wazo Dev Team
-    url: https://wazo-platform.org/
-    email: dev@wazo.community
-  x-logo:
-    url: "https://wazo-platform.org/images/logo-black.svg"
-    backgroundColor: "#FAFAFA"
-    altText: "Wazo Logo"
-x-xivo-name: agentd
-x-xivo-port: 9493
-schemes:
-- http
-securityDefinitions:
-  wazo_auth_token:
-    type: apiKey
-    name: X-Auth-Token
-    in: header
-security:
-- wazo_auth_token: []
-basePath: /1.0
-consumes:
-- application/json
-produces:
-- application/json
 paths:
-  /status:
-    get:
-      summary: Get the status of wazo-agentd.
-      description: '**Required ACL:** `agentd.status.read`'
-      operationId: get_status
-      tags:
-      - status
-      responses:
-        '200':
-          description: The internal status of wazo-agentd
-          schema:
-            $ref: '#/definitions/StatusSummary'
-  /agents:
-    get:
-      summary: Get the status of all agents.
-      description: '**Required ACL:** `agentd.agents.read`'
-      operationId: get_agents
-      tags:
-      - agents
-      parameters:
-      - $ref: '#/parameters/tenantuuid'
-      - $ref: '#/parameters/recurse'
-      responses:
-        '200':
-          description: A list of agent status
-          schema:
-            $ref: '#/definitions/AgentStatus'
-  /agents/logoff:
-    post:
-      summary: Logoff all agents.
-      description: '**Required ACL:** `agentd.agents.logoff.create`'
-      operationId: logoff_agents
-      tags:
-      - agents
-      parameters:
-      - $ref: '#/parameters/tenantuuid'
-      responses:
-        '204':
-          description: The operation was performed succesfully
-  /agents/relog:
-    post:
-      summary: Relog all agents.
-      description: '**Required ACL:** `agentd.agents.relog.create`
-
-
-        Relog all agents which are currently logged.'
-      operationId: relog_agents
-      tags:
-      - agents
-      parameters:
-      - $ref: '#/parameters/tenantuuid'
-      responses:
-        '204':
-          description: The operation was performed succesfully
   /agents/by-id/{agent_id}:
     get:
       summary: Get agent status.
@@ -539,27 +453,3 @@ definitions:
       reason:
         type: string
         description: Pause Reason
-  Error:
-    title: Error
-    properties:
-      error:
-        type: string
-        description: Error identifier
-
-  StatusSummary:
-    type: object
-    properties:
-      bus_consumer:
-        $ref: '#/definitions/ComponentWithStatus'
-      service_token:
-        $ref: '#/definitions/ComponentWithStatus'
-  ComponentWithStatus:
-    type: object
-    properties:
-      status:
-        $ref: '#/definitions/StatusValue'
-  StatusValue:
-    type: string
-    enum:
-      - fail
-      - ok
